2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-18  Andras Varga

	* index.h: title page change; adjustments in doxygen comments in other
	headers

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-02  Andras Varga

	* csimplemodule.h: expanded scheduleAt() comment, to call attention
	to related methods.

2004-10-25  Andras Varga

	* added crng.h

	* cenvir.h: added methods int numRNGs() and cRNG *rng(int k), which 
	allow access to the RNGs. The concept is that there are a number
	of RNGs available for the simulation, numbered globaly 0..N. 
	Every module uses one or more RNGs identified with "module-local RNG 
	numbers", and every local RNG number maps to a global RNGs -- and you
	can specify the mapping. Thus e.g. several module types can all work
	with RNG 0 (local RNG number), and you map some modules to physical
	RNG 0, others to physical RNG 1, and so on.

	* cenvir.h: added getRNGMappingFor(cModule *) which sets up the mapping
	in the given module

	* cmodule.h: added cRNG *rng(int k) which returns the RNG of the given
	local RNG number. This function maps k to a physical RNG number and 
	calls ev.rng(k) with it.

	* random.h: following symbols and functions were removed because they
	didn't fit into the new architecture:
	#define NUM_RANDOM_GENERATORS -- this is now an omnetpp.ini setting
        #define INTRAND_MAX -- see cRNG::intRandMax()
	int testrand() -- see cRNG::selfTest()
	long opp_nextrand(long& seed) -- no replacement
	void opp_randomize() -- no replacement
	long randseed() -- no replacement (Mersenne Twister state is >32 bits!)
	long randseed(long seed) -- no replacement (seeding from C++ not supported)
	long intrand() -- see cRNG::intRand()
	void genk_opp_randomize(int gen_nr) -- no replacement (see above)
	long genk_randseed(int gen_nr) -- no replacement (see above)
	long genk_randseed(int gen_nr, long seed) -- no replacement (see above)
	long genk_intrand(int gen_nr) -- see cRNG::intRand()

2004-10-25  Andras Varga
